--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -53,9 +53,9 @@ header.main {
   display: flex;
   flex-direction: column;
   gap: 10px; /* Reduced gap in menu */
-  align-items: flex-end; /* Align menu items to the right */
+  align-items: flex-start; /* Align menu items to the right */
   position: absolute;
-  top: 65px; /* Adjust top position */
+  top: 100px; /* Adjust top position */
   right: 20px; /* Adjust right position */
   color: #f0f0f0;
   background-color: #2c2c2c; /* Darker menu background */
@@ -89,5 +89,5 @@ header.main {
 .menu-btn:hover {
   background-color: #333;
   color: #fff;
-  transform: translateX(-5px); /* Subtle slide on hover */
+  transform: translateX(5px); /* Subtle slide on hover */
 }
