--- a/src/app/user/components/appoinments/appoinments.component.html
+++ b/src/app/user/components/appoinments/appoinments.component.html
@@ -13,7 +13,7 @@
             <p class="description">{{ appoinment.descripcion }}</p>
           </div>
           <div class="card-body status">
-            <p>Estado: {{ appoinment.estado }}</p>
+            <p>Estado: {{ getDisplayStatus( appoinment.estado ) }}</p>
           </div>
         </div>
       }
