Hecha la interfaz de clientes del admin

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -55,7 +55,7 @@
         routerLink="/staff/clients"
         routerLinkActive="active"
       >
-        Mis clientes
+        Clientes
       </button>
 
       <button
