El administrador ya puede añadir clientes y trabajadores

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -53,7 +53,7 @@
         <button
           class="btn clients-btn"
           id="clients-btn"
-          routerLink="/staff/clients"
+          routerLink="/staff/add-client"
           routerLinkActive="active"
         >
           Añadir Cliente
@@ -62,7 +62,7 @@
         <button
           class="btn clients-btn"
           id="clients-btn"
-          routerLink="/staff/clients"
+          routerLink="/staff/add-worker"
           routerLinkActive="active"
         >
           Añadir Trabajador
