--- a/src/app/general/error-page/error-page.component.html
+++ b/src/app/general/error-page/error-page.component.html
@@ -1,7 +1,13 @@
-<h1>Lo sentimos</h1>
-<p>Por motivos de seguridad, no puedes acceder a esta información</p>
-<button
-  routerLink="/home"
->
-  Ir a la página de inicio
-</button>
+
+<div class="main-content">
+  <h1>Lo sentimos</h1>
+  <p>Por motivos de seguridad, no puedes acceder a esta información</p>
+
+  <div class="button-container">
+    <button
+      routerLink="/home"
+    >
+      Ir a la página de inicio
+    </button>
+  </div>
+</div>
