--- a/src/app/user/components/create/create.component.css
+++ b/src/app/user/components/create/create.component.css
@@ -44,7 +44,8 @@
   transform: translateY(10px);
 }
 
-.first-step {
+.first-step,
+.no-pets {
   animation: fade-in-up 0.5s ease-out 0.2s forwards;
 }
 
