Ya se comprueba que el correo exista

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -27,6 +27,11 @@
               Formato de correo no válido
             </div>
           }
+          @if ( alreadyExists ) {
+            <div class="error">
+              Ya existe un usuario con este correo
+            </div>
+          }
 
         </div>
 
