Puestas las bases para que funcione la encriptación de la contraseña

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="form-container">
-      <form [formGroup]="form" (ngSubmit)="logIn()" class="form">
+      <form [formGroup]="form" (ngSubmit)="createUser()" class="form">
 
         <div class="input-container" id="name-input-container">
           <label for="name">Nombre</label>
