Creada la página del foro y modificado tamaño de la cabecera

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,6 +6,16 @@
   >
     AutoVet
   </h1>
+  <button
+    class="btn home-btn"
+    id="forum-btn"
+    routerLink="/forum"
+    routerLinkActive="active"
+    aria-current="page"
+  >
+    Foro social
+  </button>
+
 
   <nav class="pages" id="pages" aria-label="Main Navigation">
 
