--- a/src/app/vet/components/diagnosis/diagnosis.component.html
+++ b/src/app/vet/components/diagnosis/diagnosis.component.html
@@ -6,6 +6,21 @@
     <br />
     <strong>En cualquier caso, te recomendamos crear una incidencia para una valoración más exhaustiva.</strong>
   </p>
+
+  <p>¿Quieres preguntar acerca de una de tus mascotas?</p>
+  <div class="pets-div">
+    @for (pet of userPets; track $index) {
+      <div class="card">
+        <button
+          class="card-button"
+          (click)="selectPet(pet)"
+          [ngClass]="{ 'selected': selectedPet === pet }"
+        >
+          {{ pet.nombre }}
+        </button>
+      </div>
+    }
+  </div>
 </div>
 
 <div class="main-content" id="main-content">
